--- a/package.json
+++ b/package.json
@@ -17,10 +17,16 @@
   "dependencies": {
     "@sanity/client": "^2.0.1",
     "@sanity/image-url": "^0.140.19",
-    "next": "^10.0.1",
+    "axios": "^0.21.1",
+    "next": "^10.1.3",
+    "next-redux-wrapper": "^5.0.0",
     "next-sanity": "^0.1.8",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.3",
+    "redux": "^4.0.5",
+    "redux-actions": "^2.6.5",
+    "redux-saga": "^0.16.2"
   },
   "devDependencies": {
     "@sanity/cli": "^2.0.9",
@@ -29,6 +35,7 @@
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.1.2",
+    "redux-devtools-extension": "^2.13.9",
     "sanity-template": "^2.1.1",
     "tailwindcss": "^1.9.6"
   },
