--- a/package.json
+++ b/package.json
@@ -30,7 +30,14 @@
   },
   "devDependencies": {
     "@sanity/cli": "^2.0.9",
+    "babel-eslint": "^10.1.0",
     "concurrently": "^5.3.0",
+    "eslint": "^7.24.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-react": "^7.23.2",
     "lerna": "^3.22.1",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-preset-env": "^6.7.0",
